# TSA-Software-2019

./: .gitignore  Debugger.cpp  DocumentationDemo.cpp  SwapChain.hpp  build.sh  cmakeLists.txt  log.cpp  log.h  main.cpp  main.h  projectStrut.txt  queueFamilies.hpp  shader.hpp  vulkan.cpp  vulkan.h
Acrylic_Backend/: CMakeLists.txt  Input.cpp  Input.hpp  InputMap.cpp  InputMap.hpp  KeyInput.cpp  KeyInput.hpp  MouseInput.cpp  MouseInput.hpp  Random.cpp  Random.h  UserInput.cpp  UserInput.hpp  UserInputKeys.cpp  UserInputMap.cpp  UserInputMap.hpp  acrylic_engine.cpp  acrylic_engine.hpp  acrylic_frameTimer.cpp  acrylic_frameTimer.h  acrylic_interactionEngine.cpp  acrylic_physicsEngine.hpp  acrylic_random.cpp  acrylic_random.h  frameTimer.cpp  main.nfp.cpp
Acrylic_Backend/AbstractionLayer/: TaskScheduler.cpp  TaskScheduler.hpp  taskScheduler.cpp  taskScheduler.hpp
Acrylic_Backend/BackendAPIs/AcrylicAudio/: CMakeLists.txt  audio.cpp  audio.hpp  main.nfp.cpp
Acrylic_Backend/BackendAPIs/AcrylicAudio/AudioAPIs/OpenAL/: CMakeLists.txt
Acrylic_Backend/BackendAPIs/AcrylicSaveEngine/: cmakeLists.txt
Acrylic_Backend/BackendAPIs/AcrylicSaveEngine/FileSystemBackend/: acrylic_bitmap.cpp  acrylic_bitmap.h  acrylic_fileSystem.cpp  acrylic_fileSystem.hpp  acrylic_font.cpp  acrylic_font.hpp  bitmap_Doc.txt
Acrylic_Backend/BackendAPIs/BackendAPIs/required/GLFW3/include/GLFW/: glfw3.h
Acrylic_Backend/BackendAPIs/BackendAPIs/required/GLFW3/src/: input.c
Acrylic_Backend/BackendAPIs/BackendAPIs/required/trihardstudios/: CMakeLists.txt
Acrylic_Backend/BackendAPIs/BackendAPIs/required/trihardstudios/UnitTests.nfp/: main.nfp.cpp
Acrylic_Backend/BackendAPIs/BackendAPIs/required/trihardstudios/include/ths/: log.hpp
Acrylic_Backend/BackendAPIs/BackendAPIs/required/trihardstudios/log/: log.cpp
Acrylic_Backend/BackendAPIs/CPU/: TaskScheduler.hpp  taskScheduler.cpp
Acrylic_Backend/BackendAPIs/Dynamic memory/: Hash_Table.cpp  Hash_Table.h
Acrylic_Backend/BackendAPIs/Plexi2DRenderer/: CMakeSettings.json  acrylic_plexiRenderer.cpp  acrylic_plexiRenderer.hpp  acrylic_plexiRenderer_core.hpp  cmakeLists.txt  main.nfp.cpp  plexi_usrStructs.hpp
Acrylic_Backend/BackendAPIs/Plexi2DRenderer/GraphicsAPIs/required/glad/include/glad/: glad.h
Acrylic_Backend/BackendAPIs/Plexi2DRenderer/GraphicsAPIs/required/glad/src/: glad.c
Acrylic_Backend/BackendAPIs/Plexi2DRenderer/PlexiBackend/: acrylic_plexiBackend.hpp  plexiBuffer.hpp  plexiHelper.hpp  plexiShaders.cpp  plexiShaders.hpp  plexiTexture.cpp  plexiTexture.hpp  plexi_buffer.hpp  plexi_helper.hpp  plexi_shaders.cpp  plexi_shaders.hpp  plexi_texture.cpp  shaders.cpp  shaders.cpp.old  shaders.hpp
Acrylic_Backend/BackendAPIs/Plexi2DRenderer/PlexiBackend/PlexiBackend_OpenGL/: OpenGL2DTexture.cpp  OpenGL2DTexture.hpp  OpenGLMain.cpp  OpenGLMain.hpp  OpenGLShader.cpp  openGL_cleaners.cpp
Acrylic_Backend/BackendAPIs/Plexi2DRenderer/PlexiBackend/PlexiBackend_Vulkan/: vulkanMain.cpp  vulkanMain.hpp
Acrylic_Backend/BackendAPIs/Plexi2DRenderer/PlexiBackend/PlexiBackend_Vulkan/VulkanHelpers/: queueFamilies.hpp  swapChains.hpp  validationLayers.hpp
Acrylic_Backend/BackendAPIs/Plexi2DRenderer/PlexiBackend/PlexiBackend_Vulkan/VulkanHelpers/Creators/: GraphicsPiplines.cpp
Acrylic_Backend/BackendAPIs/Plexi2DRenderer/cmake/Modules/: findglfw3.cmake
Acrylic_Backend/BackendAPIs/Plexi2DRenderer/plexi_shaders/: plexi_fragment_default_cached.glsl.frag  plexi_fragment_default_primitive.glsl.frag  plexi_fragment_default_text.glsl.frag  plexi_vertex_default_cached.glsl.vert  plexi_vertex_default_primitive.glsl.vert  plexi_vertex_default_text.glsl.vert
Acrylic_Backend/EntityManager/Entities/: acrylic_entities.hpp
Acrylic_Backend/Timers/: acrylic_frameTimer.cpp  acrylic_frameTimer.h
Acrylic_Backend/UserInput/: GLFWBackend.cpp  GLFWBackend.h  Input.cpp  Input.hpp  InputMap.cpp  InputMap.hpp  Inputs.cpp  Inputs.hpp  KeyInput.cpp  KeyInput.hpp  Keys.hpp  MouseInput.cpp  MouseInput.hpp  WindowBackend.cpp  WindowBackend.hpp  acrylic_input_core.hpp
Acrylic_Backend/cmake/Modules/: Findglfw3.cmake  findshaderc_combined.cmake
Debug/: CMakeLists.txt  Debugger.cpp  log.cpp  log.h
Enity classes/: Entity.cpp  Entity.h  InteractableEntity.h
Entity_Layer/: CMakeLists.txt  Entity.cpp  nonInteractableEntity.h
VulkanTST.NFP/: QueueFamilies.hpp  SwapChain.hpp  VertexHelper.hpp  cmakelists.txt  shader.hpp  vulkan.cpp  vulkan.h
VulkanTST.NFP/shaders/: compile.bat  shader.vert
ui/: pubspec.yaml
ui/lib/: colors.dart  main.dart  main_old.dart
ui/macos/Runner.xcodeproj/: project.pbxproj
ui/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
ui/plugins/example_plugin/windows/: ExamplePlugin.vcxproj  ExamplePlugin.vcxproj.filters
ui/plugins/flutter_plugins/url_launcher_fde/windows/: url_launcher_fde.vcxproj
